apps/sitio-staging/sitio-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sitio-backend
  namespace: sitio-staging
  labels:
    app: sitio-backend
spec:
  type: ClusterIP
  selector:
    app: sitio-backend
  ports:
    - name: http
      port: 80
      targetPort: http
